[package]
name = "nsn-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
prometheus = { version = "0.13", default-features = false }

nsn-types = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
