[package]
name = "nsn-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

nsn-types = { workspace = true }
